--- a/templates/social.html
+++ b/templates/social.html
@@ -12,7 +12,7 @@
           'medium', 'tumblr', 'wordpress',
           'slideshare',
           'linkedin', 'twitter', 'weibo', 'weixin',
-          'vimeo', 'youtube',
+          'vimeo', 'youtube'
         ] %}
           <i class="fa fa-{{ title|lower }} fa-fw"></i>
         {% elif title|lower == 'facebook' %}
@@ -23,6 +23,16 @@
           <i class="fa fa-lastfm fa-fw"></i>
         {% elif title|lower == 'stack overflow' %}
           <i class="fa fa-stack-overflow fa-fw"></i>
+        {% elif title|lower == 'mendeley' %}
+          <i class="ai ai-mendeley fa-fw"></i>
+        {% elif title|lower == 'academia.edu' %}
+          <i class="ai ai-academia fa-fw"></i>
+        {% elif title|lower == 'orcid' %}
+          <i class="ai ai-orcid fa-fw"></i>
+        {% elif title|lower == 'google scholar' %}
+          <i class="ai ai-google-scholar fa-fw"></i>
+        {% elif title|lower == 'zotero' %}
+          <i class="ai ai-zotero fa-fw"></i>
         {% else %}
           <i class="fa fa-globe fa-fw"></i>
         {% endif %}
