Fix header link color

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <div class="container">
       <nav class="nav">
         <div class="nav-left">
-          <a class="nav-item is-brand title is-3{% if output_file == "index.html" %} is-active{% endif %}"
+          <a class="nav-item is-brand title is-3 is-active"
              href="{{ SITEURL }}/">{{ SITENAME }}</a>
         </div>
       </nav>
