--- a/templates/base.html
+++ b/templates/base.html
@@ -122,6 +122,7 @@
         <a href="https://blog.getpelican.com/">Pelican</a>
       | <span class="icon is-small"><i class="fa fa-html5"></i></span> HTML 5
       | <span class="icon is-small"><i class="fa fa-css3"></i></span> CSS 3
+      | <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US"><span class="icon is-small"><i class="fa fa-creative-commons"></i></span> Some Rights Reserved</a>
     </p>
   </div>
   {% include 'github.html' %}
